updates regarding the feedback from company.